Wed Apr 21 18:39:46 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: merge SMTP-TLS patch.  This patch is
	  contributed by Daniel Hob. [ruby-core:02789]

Wed Apr 21 18:23:45 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb: change coding style: def m( a ) -> def m(a).

Wed Apr 21 18:01:47 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/pop.rb: do not use class variables.

	* lib/net/pop.rb (do_start): ensure to clean up connection when
	  authentication failed.

Wed Apr 21 17:23:59 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTP#connect): CONNECT must precede SSL connect.
	  [ruby-dev:23379]

	* lib/net/http.rb (HTTP.new): class variables are not inherited
	  now.

Wed Apr 21 15:56:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/ui/console/testrunner.rb (test_started): restore $0
	  after changing process title.  [ruby-talk:97426]

Wed Apr 21 11:45:22  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* process.c: Recover wrongly removed spaces at end of the lines.

Wed Apr 21 10:18:06  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* process.c(rb_spawn): fix SEGV at "p system('command line here')"
	 (may happen only in bccwin32) [ruby-dev:23380]

Mon Apr 19 20:58:44  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c: Updated RDocs.

Mon Apr 19 08:19:11 2004  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* dln.c, io.c, pack.c, lib/benchmark.rb, lib/cgi.rb, lib/csv.rb,
	  lib/date.rb, lib/ftools.rb, lib/getoptlong.rb, lib/logger.rb,
	  lib/matrix.rb, lib/monitor.rb, lib/set.rb, lib/thwait.rb,
	  lib/timeout.rb, lib/yaml.rb, lib/drb/drb.rb, lib/irb/workspace.rb,
	  lib/net/ftp.rb, lib/net/http.rb, lib/net/imap.rb, lib/net/pop.rb,
	  lib/net/telnet.rb, lib/racc/parser.rb, lib/rinda/rinda.rb,
	  lib/rinda/tuplespace.rb, lib/shell/command-processor.rb,
	  lib/soap/rpc/soaplet.rb, lib/test/unit/testcase.rb,
	  lib/test/unit/testsuite.rb: typo fix.

Mon Apr 19 08:14:18 2004  Dave Thomas  <dave@pragprog.com>